[improvements] - support Java 16
Signed-off-by: automike <mikeliucc@gmail.com>