@@ -184,6 +184,7 @@ fi
 # setting Java runtime options and classpath
 # --------------------------------------------------------------------------------
 JAVA_OPT="${JAVA_OPT} -ea"
+JAVA_OPT="${JAVA_OPT} --add-opens=java.base/java.util=ALL-UNNAMED"
 JAVA_OPT="${JAVA_OPT} -Xss24m"
 JAVA_OPT="${JAVA_OPT} -Dfile.encoding=UTF-8"
 # JAVA_OPT="${JAVA_OPT} -Djava.awt.headless=true"
